# zabbix-googlechat

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml.example
docs/: CONFIGURATION.md  DEVELOPMENT.md  QUICKSTART.md  SPEC.md  TODO.md  USAGE.md  ZABBIX_SETUP.md
memo/history/: 001_initial_implementation.md  002_git_init_and_fixes.md  003_installation_improvement.md  004_python39_support.md
scripts/: install.sh  zabbix_notify.py
src/zabbix_googlechat/: __init__.py  card_builder.py  cli.py  config.py  exceptions.py  models.py  parser.py  webhook_sender.py
tests/fixtures/: sample_zabbix_params.json
tests/unit/: test_card_builder.py  test_cli.py  test_config.py  test_models.py  test_parser.py  test_webhook_sender.py
