[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zabbix-googlechat"
version = "1.0.0"
description = "Zabbix alert notification library for Google Chat"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
zabbix-googlechat-notify = "zabbix_googlechat.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
    "types-PyYAML>=6.0.0",
    "bandit[toml]>=1.7.10",
    "safety>=3.2.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.bandit]
exclude_dirs = ["tests", "tmp"]
skips = []
